test: fixed the x-overflow issue.

--- a/client/app/test/test.less
+++ b/client/app/test/test.less
@@ -2,3 +2,7 @@
   background-color: #222222;
   overflow-y: auto;
 }
+
+.my-row {
+  margin: 0 !important;
+}
